[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "madina"
version = "0.0.1"
authors = [
    {name="Abdulaziz Alhassan", email="alhassan@mit.edu"},
    {name="Kwesi Afrifa", email="kwesi@mit.edu"},
    {name="Orion Li", email="haoxuanl@mit.edu"}
]
description = "A library to simplify creating workflows for urban planning research. Tools to work with geometry, networks and geoprocessing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Shapely~=1.7.1",
    "geopandas~=0.10.2",
    "pandas~=1.3.3",
    "pydeck~=0.7.1",
    "numpy~=1.21.2",
    "networkx~=2.6.3",
    "momepy~=0.5.1",
    "plotly~=5.3.1",
    "dash~=2.0.0",
    "Flask~=2.0.2"
]
