[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "madina"
version = "0.0.5"
authors = [
    {name="City Form Lab", email="madina@mit.edu"},
]
description = "A library to simplify creating workflows for urban planning research. Tools to work with geometry, networks and geoprocessing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.13.2",
    "pydeck>=0.8.0b4",
    "pyogrio>=0.6.0",
    "Rtree>=1.0.1"
]

