[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[project]
name = "madina"
version = "0.0.10"
authors = [
    {name="City Form Lab", email="madina@mit.edu"},
]
description = "A library to simplify creating workflows for urban planning research. Tools to work with geometry, networks and geoprocessing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.13.2",
    "pydeck",
    "pyogrio",
    "Rtree",
    "psutil",
    "ipython",
    "ipykernel", 
]

